fix alignment of monologo

--- a/src/dev.css
+++ b/src/dev.css
@@ -34,10 +34,18 @@
 }
 
 #MonolithLogo {
-  text-align: center;
+  display:inline-block;
+  vertical-align: middle;
+  top: 30%;
+  bottom: 0;
 }
 
 header {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background-color: rgb(41, 41, 41) !important;
   opacity: 0.7;
   width: 100%;
